Fix checkbox field alignment

--- a/css/compat/themes/compat-hestia-318-beta-6.css
+++ b/css/compat/themes/compat-hestia-318-beta-6.css
@@ -4,6 +4,10 @@ body.theme-hestia div.woocommerce .form-row .fc-mailcheck-suggestion {
   padding-left: 28px !important;
 }
 
+body.theme-hestia div.woocommerce form .form-row .input-checkbox {
+  margin-top: 0;
+}
+
 body.theme-hestia div.woocommerce form .form-row .select2-selection .select2-selection__arrow {
   margin-top: 0;
 }
